--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -68,11 +68,11 @@ a[id^="Menu_"] input[type=submit] {
     max-width: calc(100% - 2em); /* 全体幅から当マージン分を引く */
     color: white;
     background-color: transparent;
-    border-left-width: 6px;
-    border-right-width: 3px;
+    border-left-width: 4px;
+    border-right-width: 2px;
     border-top-style: none;
-    border-right-style: none;
-    border-bottom-style: dotted;
+    border-right-style: solid;
+    border-bottom-style: none;
     border-left-style: solid;
     border-color: rgba(56,56,56,0.4);
     font-size: 20px;
