20200214_COMMIT  メニュー枠、高さ固定指定入れる

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -76,6 +76,7 @@ a[id^="Menu_"] input[type=submit] {
     border-left-style: solid;
     border-color: rgba(56,56,56,0.4);
     font-size: 20px;
+    height: 30px;
     font-weight: 600;
     text-align: left;
     margin-left: 2em;
