--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -67,7 +67,7 @@ a[id^="Menu_"] input[type=submit] {
     width: calc(100% - 2em); /* 全体幅から当マージン分を引く */
     max-width: calc(100% - 2em); /* 全体幅から当マージン分を引く */
     color: white;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255,0.1); /* transparent → 白の透明度90% 0.1を増加させれば白が増します */
     border-left-width: 4px;
     border-right-width: 2px;
     border-top-style: none;
@@ -84,6 +84,11 @@ a[id^="Menu_"] input[type=submit] {
     white-space: nowrap;
     padding-left: 3px;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.33);
+    /* 後ろの白アイコンと重なると白飛びするので薄めに縁取り rgba(56, 56, 56, 0.15) → 文字の縁取り 0.15を増加させれば濃くなります */
+    text-shadow: rgba(56, 56, 56, 0.15) 1px 1px 0, rgba(56, 56, 56, 0.15) -1px -1px 0, /*右下、左上*/
+    rgba(56, 56, 56, 0.15) -1px 1px 0, rgba(56, 56, 56, 0.15) 1px -1px 0, /*右上、左下*/
+    rgba(56, 56, 56, 0.15) 0px 1px 0, rgba(56, 56, 56, 0.15) 0-1px 0, /*右、左*/
+    rgba(56, 56, 56, 0.15) -1px 0 0, rgba(56, 56, 56, 0.15) 1px 0 0; /*上、下*/
 }
 /*在庫管理メニュー表示*/
 #Menu_L {
