共通：ボタンフォントサイズ大きめに 在庫表：ローリー隠し（機能未実装）、在庫表のサイド共通部を縦並び、列車ロック（機能未実装） 在庫表検索：荷主項目追加（機能未実装）

--- a/JOTWEB/OIL/css/OIT0003D.css
+++ b/JOTWEB/OIL/css/OIT0003D.css
@@ -209,11 +209,11 @@ _:-ms-lang(x)::backdrop, .calendarIconArea div, .boxIconArea div {
 /* 詳細部         */
 /* ************** */
 #detailbox {
-    font-size: 13.5px;
+    /* font-size: 13.5px; */
     /*height: calc(100% - 1.4em);*/ /* コンテンツ全体のフッターメッセージのサイズを引く */
-    position:relative;
-    bottom:0px;
-    min-height:230px;
+    position: relative;
+    bottom: 0px;
+    min-height: 230px;
 }
 /* ************** */
 /* タブレイアウト */
