空回日報、貨車連結表のヘッダー油種合計欄を２行表示から１行表示に変更

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -87,25 +87,52 @@
 }
 /* 提案表列車No、油種チェックボックス、油種ごとのテキストボックスセルの幅 */
 #divSuggestList > div.dataColumn > div.values > div {
-    width:60px;
-    min-width:60px;
-    max-width:60px;
+    width:65px;
+    min-width:65px;
+    max-width:65px;
+}
+/* 提案表列車Noが6個来た場合の設定 */
+#divSuggestList > div.dataColumn.dataColumn.has6Col{
+    /* #divSuggestList > div.dataColumn > div.values > div のWidthと合わせ６倍 */
+    width : calc(65px * 6);
+    min-width: calc(65px * 6);
+    max-width: calc(65px * 6);
+    display:flex;
+    flex-wrap:wrap;
+}
+/* 提案表列車Noが5個来た場合の設定 */
+#divSuggestList > div.dataColumn.dataColumn.has5Col{
+    /* #divSuggestList > div.dataColumn > div.values > div のWidthと合わせ５倍 */
+    width : calc(65px * 5);
+    min-width: calc(65px * 5);
+    max-width: calc(65px * 5);
+    display:flex;
+    flex-wrap:wrap;
+}
+/* 提案表列車Noが4個来た場合の設定 */
+#divSuggestList > div.dataColumn.dataColumn.has4Col{
+    /* #divSuggestList > div.dataColumn > div.values > div のWidthと合わせ４倍 */
+    width : calc(65px * 4);
+    min-width: calc(65px * 4);
+    max-width: calc(65px * 4);
+    display:flex;
+    flex-wrap:wrap;
 }
 /* 提案表列車Noが3個来た場合の設定 */
 #divSuggestList > div.dataColumn.dataColumn.has3Col{
     /* #divSuggestList > div.dataColumn > div.values > div のWidthと合わせ３倍 */
-    width : calc(60px * 3);
-    min-width: calc(60px * 3);
-    max-width: calc(60px * 3);
+    width : calc(65px * 3);
+    min-width: calc(65px * 3);
+    max-width: calc(65px * 3);
     display:flex;
     flex-wrap:wrap;
 }
 /* 提案表列車Noが2個来た場合の設定 */
 #divSuggestList > div.dataColumn.dataColumn.has2Col{
     /* #divSuggestList > div.dataColumn > div.values > div のWidthと合わせ２倍 */
-    width : calc(60px * 2);
-    min-width: calc(60px * 2);
-    max-width: calc(60px * 2);
+    width : calc(65px * 2);
+    min-width: calc(65px * 2);
+    max-width: calc(65px * 2);
     display:flex;
     flex-wrap:wrap;
 }
