--- a/JOTWEB/OIL/css/OIT0002D.css
+++ b/JOTWEB/OIL/css/OIT0002D.css
@@ -28,8 +28,8 @@
 }
 
 /* コンテンツの最小横幅 */
-.headerbox, .detailbox {
-    min-width: 1080px;
+.headerbox, .detailbox, .commonHeaderInput {
+    min-width: 1200px;
 }
 /* 下段の最小の高さ */
 .detailbox {
@@ -56,7 +56,7 @@
     flex-direction: column; /* 上下→左右の順で折り返す  */
     justify-content: center;
     align-items: center;
-    height: 120px; /* .summaryArea > span の高さが50の為 ２項目分の行となる */
+    height: 65px; /* .summaryArea > span の高さが50の為 ２項目分の行となる */
     box-sizing: border-box;
 }
 /* 1項目ごとの共通設定 */
@@ -73,7 +73,7 @@
 }
 /* 表名称項目 2行分の高さと幅調整 */
 .summaryArea > span:nth-child(1) {
-    height: 110px;
+    height: 55px;
     width: 180px;
 }
 
@@ -82,18 +82,19 @@
 }
 /* 合計項目 2行分の高さと調整 */
 .summaryArea > span:nth-child(2) {
-    height: 110px;
+    height: 55px;
 }
 
 .summaryArea > span:nth-child(2) > a:nth-child(2) {
     background-color: rgb(240, 240, 240);
     border: 1px solid darkgray;
     border-radius: 5px;
-    height: 86px;
+    height: 30px;
 }
 /* 合計項目のテキストボックス高さ調整 */
 .summaryArea > span:nth-child(2) input[type=text] {
     border-color: transparent; /* rgb(240, 240, 240);*/
+    height:30px !important;
 }
 /* 合計表内のテキストボックスの文字はすべて右寄せ */
 .summaryArea input[type=text] {
