在庫表：列車ロック機能追加（運休での操作を見越した処理）

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -219,6 +219,8 @@
     //float: right;
     pointer-events: auto; 
     cursor:pointer !important;
+    position:relative;
+    z-index:2;
 }
 #divSuggestList div.trainNo[data-ispastday=True] .lockImgArea {
     pointer-events: none; 
