メニューへ戻るボタンがマスタメンテでワークしなかった部分修正＋当該ボタン１つ前に戻りたいのにメニューに戻しそうなので別色に

--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -68,6 +68,15 @@ button[disabled=""]:hover {
 #divHidden {
     display: none;
 }
+/* メニューへボタン */
+#WF_ButtonBackToMenu {
+    color: #F58E7E;
+    border: solid 1px #F58E7E;
+}
+#WF_ButtonBackToMenu:hover {
+    background: #F58E7E;
+    color: #fff;
+}
 /* 一覧先頭ページ、最終ページボタン */
 .firstPage, .lastPage {
     width: 24px;
