--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1358,7 +1358,7 @@ div[data-generated='1'] .safe:after {
     background-image: url('../oil/img/caution.png');
     background-repeat: no-repeat;
     background-size: contain;
-    margin-left:calc(50% - 16px); /* 全体50%横幅 - (このWidth / 2) */
+    margin-left:calc(50% - 16px); /* 中央寄せに、全体50%横幅 - (このWidth / 2) */
 }
 /* warning用(旧黄●)の設定 */
 div[data-generated='1'] .warning:after {
@@ -1370,7 +1370,7 @@ div[data-generated='1'] .warning:after {
     background-image: url('../oil/img/caution.png');
     background-repeat: no-repeat;
     background-size: contain;
-    margin-left:calc(50% - 16px); /* 全体50%横幅 - (このWidth / 2) */
+    margin-left:calc(50% - 16px); /* 中央寄せに、全体50%横幅 - (このWidth / 2) */
 }
 /* after用(旧赤●)の設定 */
 div[data-generated='1'] .caution:after {
@@ -1382,7 +1382,7 @@ div[data-generated='1'] .caution:after {
     background-image: url('../oil/img/caution.png');
     background-repeat: no-repeat;
     background-size: contain;
-    margin-left:calc(50% - 16px); /* 全体50%横幅 - (このWidth / 2) */
+    margin-left:calc(50% - 16px); /* 中央寄せに、全体50%横幅 - (このWidth / 2) */
 }
 div[data-generated='1'] input[type=text],
 div[data-generated='1'] input[type=number]{
