--- a/JOTWEB/OIL/OILMasterPage.Master
+++ b/JOTWEB/OIL/OILMasterPage.Master
@@ -23,6 +23,16 @@
     <%-- コンテンツ領域 --%>
     <asp:ContentPlaceHolder ID="head" runat="server" />
 
+    
+    <%-- Global site tag (gtag.js) - Google Analytics --%>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162169937-1"></script>
+    <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'UA-162169937-1');
+    </script>
+
 </head>
 
 <body spellcheck="false">
