--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -468,6 +468,7 @@ input[type=number][readonly].calendarIcon:not(.iconOnly) {
 #tblTitlebox tr:nth-child(1) td:nth-child(2) {
     font-size: x-large;
     font-weight:900;
+    background-image:url(../img/oillogo.png);
     vertical-align: middle;
     text-align: center;
 }
